Revert "Connect Plaid API for live balances and proof gating"

--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,13 @@
     <main>
       <h1>ZK Property Demo</h1>
       <section class="card">
-        <h2>Plaid Bank Flow</h2>
+        <h2>Plaid Sandbox Flow</h2>
         <p>
-          Connect to your bank with Plaid, fetch live balances, and generate an in-browser Noir proof
+          Connect to the Plaid sandbox, fetch balances, and generate an in-browser Noir proof
           that your total holdings meet a target property price.
         </p>
         <div class="actions">
-          <button id="connect-btn">Connect bank</button>
+          <button id="connect-btn">Connect bank (sandbox)</button>
           <button id="prove-btn" disabled>Generate proof &amp; verify</button>
         </div>
         <div class="input-row">
@@ -31,7 +31,6 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Account</th>
               <th>Balance (pence)</th>
             </tr>
           </thead>
